[package]
name = "zgs_kv"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { version = "=1.0.58", features = ["backtrace"] }
clap = { version = "3.2.5", features = ["cargo"] }
ctrlc = "3.2.2"
error-chain = "0.12.4"
ethereum-types = "0.14"
exit-future = "0.2.0"
futures = "0.3.21"
log_entry_sync = { path = "./log_entry_sync" }
rpc = { path = "./rpc" }
shared_types = { path = "./shared_types" }
storage_with_stream = { path = "./storage_with_stream" }
stream = { path = "./stream" }
task_executor = { git = "https://github.com/0glabs/0g-storage-node.git", branch = "main" }
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
http = "0.2.8"

[dependencies.libp2p]
version = "0.45.1"
default-features = true
features = ["websocket", "identify", "mplex", "yamux", "noise", "gossipsub", "dns-tokio", "tcp-tokio", "plaintext", "secp256k1"]
