[package]
name = "log_entry_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
append_merkle = { workspace = true }
async-trait = "0.1.56"
ethereum-types = "0.14"
futures = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["full"] }
kv_types = { path = "../kv_types" }
shared_types = { workspace = true }
task_executor = { workspace = true }
tokio = "1.19.2"
ethers = { version = "^2", features = ["ws"] }
serde_json = "1.0.127"
storage = { workspace = true }
storage_with_stream = { path = "../storage_with_stream" }
contract-interface = { workspace = true }
futures-core = "0.3.28"
futures-util = "0.3.28"
thiserror = "1.0.44"
lazy_static = "1.4.0"
metrics = { workspace = true }
reqwest = {version = "0.11", features = ["json"]}
url = { version = "2.4", default-features = false }
