[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append_merkle = { workspace = true }
futures = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
base64 = "0.13.0"
shared_types = { workspace = true }
task_executor = { workspace = true }
tokio = { version = "1.19.2", features = ["macros", "sync"] }
tracing = "0.1.35"
merkle_light = { workspace = true }
merkle_tree = { workspace = true }
zgs_rpc = { git = "https://github.com/0glabs/0g-storage-node.git", branch = "main", package = "rpc" }
futures-channel = "^0.3"
ethereum-types = "0.14"
storage_with_stream = { path = "../storage_with_stream" }
kv_types = { path = "../kv_types" }

[dev-dependencies]
serde_json = "1.0.127"
