[package]
name = "stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", features = ["backtrace"] }
append_merkle = { workspace = true }
async-trait = "0.1.56"
ethereum-types = "0.14"
futures = "0.3.21"
jsonrpsee = { version = "0.14.0", features = ["full"] }
shared_types = { workspace = true }
kv_types = { path = "../kv_types" }
task_executor = { workspace = true }
tokio = "1.19.2"
ethers = { version = "^2", features = ["ws"] }
serde_json = "1.0.127"
storage_with_stream = { path = "../storage_with_stream" }
rpc = {path = "../rpc"}
zgs_rpc = { git = "https://github.com/0glabs/0g-storage-node.git", rev = "da2cdec8a1ddfd52333a6c10141df31611d0e1f8", package = "rpc" }
zgs_storage = { git = "https://github.com/0glabs/0g-storage-node.git", rev = "da2cdec8a1ddfd52333a6c10141df31611d0e1f8", package = "storage" }
contract-interface = { workspace = true }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tracing = "0.1.35"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
thiserror = "1.0.37"
